# facmodts

./: .gitignore  PHASE1_COMPLETE.md  PHASE1_STATUS.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: basic_usage.py  reporting_attribution.py  risk_decomposition.py  robust_regression.py  variable_selection.py  visualization.py  wrapper_functions.py
facmodts/: __init__.py  control.py  decomposition.py  fitting.py  models.py  performance.py  plotting.py  reporting.py  robust.py  utils.py  variable_selection.py  wrappers.py
tests/: conftest.py  test_control.py  test_decomposition.py  test_fitting.py  test_performance.py  test_plotting.py  test_r_comparison.py  test_reporting.py  test_robust.py  test_utils.py  test_variable_selection.py  test_wrappers.py
tests/data/: stocks_factors.csv
