[project]
name = "facmodts"
version = "0.1.0"
description = "Time series factor models for robust portfolio construction and risk analysis"
authors = [
    {name = "Python Conversion Team"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}

dependencies = [
    "numpy>=1.24.0",
    "polars>=0.20.0",
    "pandas>=2.0.0",
    "statsmodels>=0.14.0",
    "scipy>=1.10.0",
    "numba>=0.58.0",
    "scikit-learn>=1.3.0",
    "mlxtend>=0.22.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "rpy2>=3.5.0",
]
plot = [
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
    "seaborn>=0.12.0",
]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=facmodts --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
