[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "facmodts"
version = "0.1.0"
description = "Time series factor models for robust portfolio construction and risk analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "Drew Hayes", email = "dru.hayes@gmail.com"},
]
keywords = ["finance", "factor-models", "time-series", "risk-analysis", "quantitative-finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.24.0",
    "polars>=0.20.0",
    "pandas>=2.0.0",
    "statsmodels>=0.14.0",
    "scipy>=1.10.0",
    "numba>=0.58.0",
    "scikit-learn>=1.3.0",
    "mlxtend>=0.22.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "rpy2>=3.5.0",
]
plot = [
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
    "seaborn>=0.12.0",
]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/Druhayes/facmodts"
Documentation = "https://github.com/Druhayes/facmodts#readme"
Repository = "https://github.com/Druhayes/facmodts"
"Bug Tracker" = "https://github.com/Druhayes/facmodts/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=facmodts --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
